Fixed explore item list not being scrollable when overflowing

--- a/src/components/pages/Explore/Explore.module.css
+++ b/src/components/pages/Explore/Explore.module.css
@@ -4,6 +4,9 @@
     flex-direction: column;
     align-items: center;
     gap: 10px;
+    overflow: hidden;
+    width: 100vw;
+    height: calc(100vh - 75px);
 }
 .toggle-buttons{
     width: 100%;
@@ -51,6 +54,9 @@
     align-items: center;
     gap: 15px;
     width: 100%;
+    flex-grow: 1;
     padding: 0 10px 0 5px;
     overflow-x: hidden;
+    overflow-y: auto;
 }
+
